feat: migrated to java21
BREAKING CHANGE: java 21 migration